--- a/app/sass/composition.sass
+++ b/app/sass/composition.sass
@@ -1,5 +1,10 @@
-// composition
+// Helpers
 
-body
-  background-color: black
-  color: white
+@import helpers/reset
+@import helpers/variables
+@import helpers/mixins
+
+// Base settings
+@import helpers/base
+
+// Modules
